syntax = "proto3";
option csharp_namespace = "ForumGrpc";

package todo;

service  Todo {
  // create
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {}
  
  // read single
  rpc ReadTodo(ReadTodoRequest) returns (ReadTodoResponse) {}
  
  // read list
  rpc ListTodo(GetAllRequest) returns (GetAllResponse) {}
  
  // update
  rpc UpdateTodo(UpdateToDoRequest) returns (UpdateToDoResponse) {}
  
  // delete
  rpc DeleteTodo(DeleteToDoRequest) returns (DeleteToDoResponse) {}
}

message CreateTodoRequest { 
  string  title = 1;
  string  description = 2;
}

message CreateTodoResponse {
  int32 id = 1;
}

message ReadTodoRequest {
  int32 id = 1;
}

message ReadTodoResponse {
  int32 id = 1;
  string  title = 2;
  string  description = 3;
  string to_do_status = 4;
}

message GetAllRequest {
  
}

message  GetAllResponse {
  repeated  ReadTodoResponse to_do= 1; // for array
}

message UpdateToDoRequest {
  int32 id = 1;
  string  title = 2;
  string  description = 3;
  string to_do_status = 4;
}

message UpdateToDoResponse {
  int32 id = 1;
}

message DeleteToDoRequest {
  int32 id = 1;
}

message DeleteToDoResponse {
  int32 id = 1;
}